# kedro-logfire-example

./: README.md  pyproject.toml  requirements.txt  stats.json
conf/: logging.yml
src/kedro_logfire_example/: __init__.py  __main__.py  settings.py
src/kedro_logfire_example/pipelines/data_processing/: nodes.py
